--- a/frontend/src/pages/Home/DrDiv.module.css
+++ b/frontend/src/pages/Home/DrDiv.module.css
@@ -1,10 +1,13 @@
 .container {
-    width: 80%;
-    grid-template-columns:repeat(2, 1fr) ;
+  height: 500px;
+     display: grid;
+     grid-template-columns: 20% 70%;
     column-gap: 5px;
     margin:  auto;
-    
-    padding: 0 20px;
+    justify-content: space-between;
+border: 5px solid red ;
+     width: 80%;
+     margin: auto;
   }
   
   @media screen and (max-width: 768px) {
@@ -17,6 +20,6 @@
   @media screen and (max-width: 480px) {
     .container {
       max-width: 400px;
-      grid-template-columns: repeat(1,1fr);
+      /* grid-template-columns: 50% 50%; */
     }
   }
